syntax = "proto3";

package stats.message;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "ru.practicum.grpc.stats";

message UserActionProto {
  int64 user_id = 1;
  int64 event_id = 2;
  ActionTypeProto action_type = 3;
  google.protobuf.Timestamp timestamp = 4;
}

enum ActionTypeProto {
    ACTION_VIEW = 0;
    ACTION_REGISTER = 1;
    ACTION_LIKE = 2;
}

message UserPredictionsRequestProto {
  int64 user_id = 1;
  int32 max_results = 2;
}

message SimilarEventsRequestProto {
  int64 event_id = 1;
  int64 user_id = 2;
  int32 max_results = 3;
}

message InteractionsCountRequestProto {
  repeated int64 event_id = 1;
}

message RecommendedEventProto {
  int64 event_id = 1;
  double score = 2;
}