syntax = "proto3";

package stats.service.dashboard;

import "stats/messages/user.proto";
import "google/protobuf/empty.proto";

option java_package = "ru.practicum.grpc.stats";

service RecommendationsController {
  rpc GetRecommendationsForUser(stats.message.UserPredictionsRequestProto)
      returns (stream stats.message.RecommendedEventProto);

  rpc GetSimilarEvents(stats.message.SimilarEventsRequestProto)
      returns (stream stats.message.RecommendedEventProto);

  rpc GetInteractionsCount(stats.message.InteractionsCountRequestProto)
      returns (stream stats.message.RecommendedEventProto);
}